--- a/css/style.css
+++ b/css/style.css
@@ -268,8 +268,8 @@ input[type="reset"],
 input[type="button"],
 button {
     font-family: 'Didact Gothic', sans-serif;
-    background: #b08c3e;
-    border: 1px solid #b08c3e;
+    background: #8BA889;
+    border: 1px solid #8BA889;
     color: #fff;
     padding: 12px 30px;
     margin: 0;
@@ -335,7 +335,7 @@ input[type=checkbox]:before {
 input[type=checkbox]:after {
     font-family: 'themify';
     content: '\e64c';
-    color: #b08c3e;
+    color: #8BA889;
     background: transparent;
     position: absolute;
     top: 1px;
@@ -378,7 +378,7 @@ input[type=radio]:before {
     display: inline-block;
     top: 0px;
     left: -4px;
-    background-image: radial-gradient(circle, #b08c3e 50%, #fff 70%);
+    background-image: radial-gradient(circle, #8BA889 50%, #fff 70%);
     background-size: 0;
     background-position: 50% 50%;
     background-repeat: no-repeat;
@@ -461,7 +461,7 @@ input[type=radio]:checked:before {
   position: absolute;
   width: 26px;
   height: 26px;
-  background: #b08c3e;
+  background: #8BA889;
   animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 .lds-heart div:after,
@@ -471,7 +471,7 @@ input[type=radio]:checked:before {
   display: block;
   width: 26px;
   height: 26px;
-  background: #b08c3e;
+  background: #8BA889;
 }
 .lds-heart div:before {
   left: -17px;
@@ -534,8 +534,8 @@ input[type=radio]:checked:before {
 }
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #b08c3e;
-    border: 1px solid #b08c3e;
+    background: #8BA889;
+    border: 1px solid #8BA889;
 }
 
 
@@ -556,7 +556,7 @@ input[type=radio]:checked:before {
     outline: none;
 }
 .navbar .navbar-toggler-icon {
-    color: #b08c3e;
+    color: #8BA889;
     
 }
 .navbar .navbar-nav .nav-link {
@@ -572,10 +572,10 @@ input[type=radio]:checked:before {
     color: #fff;
 }
 .navbar .navbar-nav .nav-link:hover {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .navbar .navbar-nav .active {
-    color: #b08c3e !important;
+    color: #8BA889 !important;
 }
 .nav-scroll {
     background: #fff;
@@ -594,13 +594,13 @@ input[type=radio]:checked:before {
     box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.03);
 }
 .nav-scroll .navbar-toggler-icon {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .nav-scroll .navbar-nav .nav-link {
     color: #1b1b1b;
 }
 .nav-scroll .navbar-nav .active {
-    color: #b08c3e !important;
+    color: #8BA889 !important;
 }
 .nav-scroll .navbar-nav .logo {
     padding: 15px 0;
@@ -742,7 +742,7 @@ input[type=radio]:checked:before {
 .sub-menu .dropdown-item:hover {
     background: transparent;
     padding-left: 20px;
-    color: #b08c3e;
+    color: #8BA889;
 }
 .dropdown-menu .dropdown-item a,
 .sub-menu .dropdown-item a {
@@ -751,15 +751,15 @@ input[type=radio]:checked:before {
 }
 .dropdown-menu .dropdown-item a:hover,
 .sub-menu .dropdown-item a:hover {
-color: #b08c3e;
+color: #8BA889;
 }
 .dropdown-menu .dropdown-item a .badge,
 .sub-menu .dropdown-item a .badge {
     margin-left: 10px;
     padding: 3px 5px 3px 5px;
     font-size: 8px;
-    background: #b08c3e;
-    border: 1px solid #b08c3e;
+    background: #8BA889;
+    border: 1px solid #8BA889;
     top: 12px;
     border-radius: 0px;
     color: #1b1b1b;
@@ -994,7 +994,7 @@ color: #b08c3e;
 }
 .section-subtitle {
     display: block;
-    color: #b08c3e;
+    color: #8BA889;
     font-size: 14px;
     font-weight: 400;
     font-family: 'Didact Gothic', sans-serif;
@@ -1012,7 +1012,7 @@ color: #b08c3e;
 }
 .rsvp h6 {
     display: block;
-    color: #b08c3e;
+    color: #8BA889;
     font-size: 30px;
     font-weight: 400;
     font-family: 'Alex Brush', cursive;
@@ -1072,11 +1072,11 @@ color: #b08c3e;
     letter-spacing: 3px;
 }
 .bride-groom .info h6 i {
-    color: #b08c3e;
+    color: #8BA889;
     font-size: 16px;
 }
 .bride-groom .info span {
-      color: #b08c3e;
+      color: #8BA889;
     font-size: 24px;
     font-weight: 400;
     font-family: 'Alex Brush', cursive;
@@ -1173,7 +1173,7 @@ color: #b08c3e;
     font-family: 'Alex Brush', cursive;
 }
 .story .caption h6 {
-    color: #b08c3e;
+    color: #8BA889;
     font-family: 'Didact Gothic', sans-serif;
     font-size: 12px;
     margin-bottom: 10px;
@@ -1354,7 +1354,7 @@ color: #b08c3e;
     letter-spacing: 3px;
 }
 .friends .info span {
-    color: #b08c3e;
+    color: #8BA889;
     font-size: 22px;
     font-weight: 400;
     margin-bottom: 5px;
@@ -1422,7 +1422,7 @@ overflow: hidden !important;
           transform: scale(0);
 }
 .story-video .video-wrapper .vid .vid-butn .icon {
-    color: #b08c3e;
+    color: #8BA889;
     width: 100px;
     height: 100px;
     border: 1px solid rgba(255, 255, 255, 0.2);
@@ -1503,7 +1503,7 @@ overflow: hidden !important;
     font-family: 'Alex Brush', cursive;
 }
 .events .caption h6 {
-    color: #b08c3e;
+    color: #8BA889;
     font-family: 'Didact Gothic', sans-serif;
     font-size: 12px;
     margin-bottom: 10px;
@@ -1561,7 +1561,7 @@ overflow: hidden !important;
 .when-where .content .date h3 {
     font-size: 75px;
     font-weight: 600;
-    color: #b08c3e;
+    color: #8BA889;
     margin-bottom: 0px;
     font-family: 'Didact Gothic', sans-serif;
 }
@@ -1597,7 +1597,7 @@ overflow: hidden !important;
 }
 .when-where .content .cont .cont-list li .icon span {
     font-size: 16px;
-    color: #b08c3e;
+    color: #8BA889;
 }
 .when-where .content .cont .cont-list li .text {
     margin-left: 20px;
@@ -1613,13 +1613,13 @@ overflow: hidden !important;
     transition: all 500ms ease;
 }
 .when-where .content .cont .cont-list li .text p a:hover {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .when-where .content .cont p {
     margin-bottom: 10px;
 }
 .when-where .content .cont p i {
-    color: #b08c3e;
+    color: #8BA889;
     font-size: 16px;
     margin-right: 5px;
 
@@ -1629,7 +1629,7 @@ overflow: hidden !important;
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
-  color: #b08c3e;
+  color: #8BA889;
   padding-left: 40px;
   position: relative;
 }
@@ -1637,7 +1637,7 @@ overflow: hidden !important;
   content: '';
   width: 30px;
   height: 1px;
-  background: #b08c3e;
+  background: #8BA889;
   position: absolute;
   top: 50%;
   left: 0px;
@@ -1648,13 +1648,13 @@ overflow: hidden !important;
 .when-where .content .info h6 {
     font-size: 12px;
     letter-spacing: 5px;
-    color: #b08c3e;
+    color: #8BA889;
     font-family: 'Didact Gothic', sans-serif;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
 .when-where .content .info .tags {
-  color: #b08c3e;
+  color: #8BA889;
 }
 @media screen and (max-width: 991px) {
     .when-where .content {
@@ -1706,7 +1706,7 @@ overflow: hidden !important;
 .gallery-menu a.active,
 .gallery-menu a:hover {
        color: #fff;
-    background-color: #b08c3e;
+    background-color: #8BA889;
 }
 .gallery-item {
     position: relative;
@@ -1804,7 +1804,7 @@ overflow: hidden !important;
     font-family: 'Didact Gothic', sans-serif;
     font-size: 70px;
     font-weight: 400;
-    color: #b08c3e;
+    color: #8BA889;
     margin-bottom: 10px;
 }
 .marybrian-blog .content .date h6 {
@@ -1841,13 +1841,13 @@ overflow: hidden !important;
   content: '';
   width: 40px;
   height: 1px;
-  background: #b08c3e;
+  background: #8BA889;
   position: absolute;
   top: 50%;
   left: 0px;
 }
 .marybrian-blog .content .cont .more:hover {
-   color: #b08c3e; 
+   color: #8BA889; 
 }
 .marybrian-blog .content .info h6 {
     font-size: 12px;
@@ -1857,7 +1857,7 @@ overflow: hidden !important;
     text-transform: uppercase;
 }
 .marybrian-blog .content .info .tags {
-  color: #b08c3e;
+  color: #8BA889;
 }
 @media screen and (max-width: 991px) {
     .marybrian-blog .content {
@@ -1996,13 +1996,13 @@ overflow: hidden !important;
 .blog-page .post-cont .date {
     font-size: 12px;
     text-transform: uppercase;
-    color: #b08c3e;
+    color: #8BA889;
     font-weight: 400;
     letter-spacing: 5px;
 }
 .blog-page .post-cont .tag:hover,
 .blog-page .post-cont .date:hover {
-  color: #b08c3e;  
+  color: #8BA889;  
 }
 .blog-page .post-cont h5 {
     font-size: 40px;
@@ -2013,7 +2013,7 @@ overflow: hidden !important;
     color: #000;
 }
 .blog-page .post-cont h5 a:hover {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .blog-page .post-cont .info {
     margin-top: 0px;
@@ -2044,16 +2044,16 @@ overflow: hidden !important;
     margin-bottom: 10px;
 }
 .blog-sidebar .widget ul li:hover {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .blog-sidebar .widget ul li a {
     color: #666;
 }
 .blog-sidebar .widget ul li a.active {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .blog-sidebar .widget ul li a:hover {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .blog-sidebar .widget ul li:last-child {
     margin-bottom: 0;
@@ -2119,7 +2119,7 @@ overflow: hidden !important;
 .blog-sidebar ul.tags li:hover,
 .blog-sidebar ul.tags li a:hover {
     color: #fff;
-    background-color: #b08c3e;
+    background-color: #8BA889;
 }
 .blog-comment-section {
     padding-top: 60px;
@@ -2190,13 +2190,13 @@ overflow: hidden !important;
 .blog-pagination-wrap li a:hover {
     opacity: 1;
     text-decoration: none;
-    background-color: #b08c3e;
-    border: 1px solid #b08c3e;
+    background-color: #8BA889;
+    border: 1px solid #8BA889;
     color: #fff;
 }
 .blog-pagination-wrap li a.active {
-    background-color: #b08c3e;
-    border: 1px solid #b08c3e;
+    background-color: #8BA889;
+    border: 1px solid #8BA889;
     color: #fff;
 }
 .blog-pagination-wrap li a i { 
@@ -2229,7 +2229,7 @@ overflow: hidden !important;
     align-items: center;
 }
 .post-list li .icon span {
-    color: #b08c3e;
+    color: #8BA889;
     font-size: 12px;
 }
 .post-list li .text {
@@ -2295,7 +2295,7 @@ overflow: hidden !important;
     fill: none;
 }
 .progress-wrap svg.progress-circle path {
-    stroke: #b08c3e;
+    stroke: #8BA889;
     stroke-width: 2;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -2308,10 +2308,10 @@ overflow: hidden !important;
     box-shadow: inset 0 0 0 1px rgba(130, 130, 130, 0.2);
 }
 .progress-wrap::after {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .progress-wrap svg.progress-circle path {
-    stroke: #b08c3e;
+    stroke: #8BA889;
 }
 
 
@@ -2326,7 +2326,7 @@ overflow: hidden !important;
     margin-bottom: 10px;
 }
 .gift-registry h6 {
-    color: #b08c3e;
+    color: #8BA889;
 }
 .gift-registry .owl-carousel {
     margin: 30px 0;
@@ -2410,7 +2410,7 @@ overflow: hidden !important;
   z-index: 3;
 }
 .insta .follow .text-bg i {
-  color: #b08c3e;
+  color: #8BA889;
     z-index: 1;
 }
 .insta .follow .text-bg span {
@@ -2455,7 +2455,7 @@ overflow: hidden !important;
     color: #666;
 }
 .sub-footer p a:hover {
-    color: #b08c3e;
+    color: #8BA889;
 }
 
 
@@ -2517,7 +2517,7 @@ overflow: hidden !important;
         color: #666 !important;
     }
     .nav-scroll .navbar-collapse .active {
-        color: #b08c3e !important;
+        color: #8BA889 !important;
     }
     .dropdown-menu {
         opacity: 1;
