--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,9 @@ img {
 .bg-cream {
     background: #faf8f7;
 }
+.bg-salvia {
+    background: #49654E;
+}
 .o-hidden {
     overflow: hidden;
 }
